# PhantomHR

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
reference/: README.md
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/ble-peripheral/: Cargo.toml  build.rs
src-tauri/plugins/ble-peripheral/android/: build.gradle.kts
src-tauri/plugins/ble-peripheral/android/src/main/: AndroidManifest.xml
src-tauri/plugins/ble-peripheral/android/src/main/java/com/phantomhr/plugin/: BleConstants.kt  BlePeripheralPlugin.kt  HeartRateGattServer.kt  HrDataGenerator.kt
src-tauri/plugins/ble-peripheral/ios/Sources/: BlePeripheralPlugin.swift  HeartRatePeripheralManager.swift  HrDataGenerator.swift
src-tauri/plugins/ble-peripheral/permissions/: default.toml
src-tauri/plugins/ble-peripheral/permissions/autogenerated/: reference.md
src-tauri/plugins/ble-peripheral/permissions/autogenerated/commands/: start_advertising.toml  stop_advertising.toml  update_config.toml
src-tauri/plugins/ble-peripheral/permissions/schemas/: schema.json
src-tauri/plugins/ble-peripheral/src/: commands.rs  lib.rs  mobile.rs  models.rs
src-tauri/src/: lib.rs  main.rs
src/lib/: BpmControls.svelte  EventLog.svelte  SimulatorScreen.svelte  StatusBadge.svelte  ble.ts
