[package]
name = "tauri-plugin-ble-peripheral"
version = "0.1.0"
edition = "2021"
links = "tauri-plugin-ble-peripheral"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"] }
log = "0.4"
